--- a/src/Component6.css
+++ b/src/Component6.css
@@ -1,1 +1,12 @@
+.formpagamento {
+    /* padding-left: 15px;
+    padding-right: 15px; */
+}
 
+.radiobutton {
+    margin-top: 3%;
+}
+
+.radiobuttonsec {
+        padding-top: 20px;
+}
