--- a/src/Footer.css
+++ b/src/Footer.css
@@ -9,9 +9,17 @@
 
 .suporto {
     color: rgb(255, 255, 255);
+    font-weight: bold;
+    margin-left: 37%;
 }
 
 .copyright{
     color: rgb(255, 255, 255);
     display: grid;
+}
+
+.contact {
+    color: white;
+    font-size: x-small;
+        margin-left: 15%;
 }
